# MLEngineering

./: .env  .gitignore  Makefile  README.md  collection.py  config.py  db_model.py  model.py  model_service.py  preparation.py  pyproject.toml  runner.py  setup.cfg
.github/actions/build-application/: action.yml
.github/workflows/: lint.yml  workflow.yml
draft/: model_drafting.ipynb
src/: runner.py  runner_builder.py  runner_inference.py
src/config/: .env  __init__.py  db.py  logger.py  model.py
src/db/: db_model.py
src/model/: model_builder.py  model_inference.py  model_service.py
src/model/pipeline/: collection.py  model.py  preparation.py
